@@ -1,7 +1,7 @@
 Package: soundgen
 Type: Package
 Title: Parametric Voice Synthesis
-Version: 1.2.1
+Version: 1.2.1.9000
 Date: 2018-08-04
 Authors@R: person("Andrey", "Anikin", email = "rty.anik@rambler.ru", role = c("aut", "cre"))
 Maintainer: Andrey Anikin <rty.anik@rambler.ru>
