@@ -1,3 +1,5 @@
+          CHANGES IN SOUNDGEN VERSION 1.2.2 [...date...]
+
           CHANGES IN SOUNDGEN VERSION 1.2.1 [04-August-2018]
 
 NEW FUNCTIONS:
